# TypeK

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_ar-SA.md  README_en-US.md  README_es-ES.md  README_fr-FR.md  README_ja-JP.md  README_ko-KR.md  README_ru-RU.md  README_th-TH.md  README_vi-VN.md  README_zh-CN.md  index.html  main-window.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  voice-transcription-poc-spec.md  解鎖TypeK.command
.github/workflows/: release.yml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-v2-infrastructure-dual-window.md  1-2-rdev-cross-platform-hotkey.md  1-3-api-key-storage-system-tray.md  1-5-hud-status-permission-guide.md  2-4-whisper-hallucination-detection.md  sprint-status.yaml  tech-spec-ai-prompt-mode-switcher.md  tech-spec-language-separation-cgevent-paste-sentry-fix.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-01.md  prd.md  product-brief-sayit-2026-02-28.md  ux-ui-design-spec.md
_bmad-output/test-artifacts/: automation-summary.md  framework-setup-progress.md
_bmad/bmm/: config.yaml
scripts/: release.sh
src/: App.vue  MainApp.vue  main-window.ts  main.ts  router.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/: audio_recorder.rs  clipboard_paste.rs  hotkey_listener.rs  mod.rs  sound_feedback.rs  transcription.rs
src/components/: AccessibilityGuide.vue  (+2 more)
tests/: README.md
(+54 files in other folders)
