[package]
name = "sayit"
version = "0.1.0"
edition = "2021"

[lib]
name = "sayit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
enigo = { version = "0.2", features = ["serde"] }
thiserror = "2"
rdev = "0.5.3"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "~2.2.0"
tauri-plugin-store = "~2.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
